--- a/03_1_payslip.ipynb
+++ b/03_1_payslip.ipynb
@@ -46,59 +46,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 30,
       "metadata": {
         "id": "2UenEHfcTuLz",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 279
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "913d16eb-4824-4eb4-8402-5894fefd193a"
+        "outputId": "d3e6907e-d8bb-4b9b-bba3-0b7b434ea932"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Enter your salary25000\n",
-            "Enter your sales20000\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-43-2d08cc1435a8>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# calculate the commision\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mcommission\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.02\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msales\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# calculate the tax\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'float'"
+            "----------Salary Slips----------\n",
+            "Salary:     25000 \n",
+            "Commission: 400.0 \n",
+            "Tax:        2540.0 \n",
+            "Pay:        22860.0\n"
           ]
         }
       ],
       "source": [
-        "# assign values for salar and sales\n",
-        "salary =int=(input(prompt=\"Enter your salary\"))\n",
-        "sales = int=(input(prompt=\"Enter your sales\"))\n",
         "\n",
-        "# calculate the commision\n",
-        "commission = 0.02 * sales\n",
-        "\n",
-        "# calculate the tax\n",
-        "tax = (salary + commission) * 0.10\n",
-        "\n",
-        "# calculate the pay\n",
-        "pay = salary + commission - tax\n",
-        "\n",
-        "# print the payslip\n",
-        "print('=== Payslip of Ram ===')\n",
-        "print(f\"Salary: {salary:9} \\nCommission: {commission:} \\nTax: {tax:13}\")\n",
-        "print(f\"Total pay: {pay:8}\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "salary=25000\n",
         "sale=20000\n",
         "commission=0.02\n",
@@ -107,12 +77,16 @@
         "tax=total_earnings*0.1\n",
         "pay=salary+mycommission-tax\n",
         "print(\"----------Salary Slips----------\")\n",
-        "print(f\"Salary: {salary:9} \\nCommission: {mycommission:}: \\nTax: {tax:13} \\nPay:{pay:15}\")\n"
-      ],
+        "print(f\"Salary: {salary:9} \\nCommission: {mycommission:} \\nTax: {tax:13} \\nPay:{pay:15}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "metadata": {
         "id": "hQ_wwOgAibiI"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -126,13 +100,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
-        "id": "wFmuD9ujUgDW"
+        "id": "wFmuD9ujUgDW",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "c9eefadd-77e2-4a8b-e25b-fba474213f6c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-58-119973ec8762>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    print(f\"Salary: {Salary:9} \\nCommission:\" {mycommission:}\")\u001b[0m\n\u001b[0m                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 17)\n"
+          ]
+        }
+      ],
       "source": [
-        "\n"
+        "Salary=30000\n",
+        "sale=40000\n",
+        "commission=0.025\n",
+        "mycommission=sale*commission\n",
+        "total_earnings=Salary+mycommission\n",
+        "tax=total_earnings*0.1\n",
+        "income_after_tax=total_earnings-tax\n",
+        "deduction=income_after_tax*0.1\n",
+        "total_income=income_after_tax-deduction\n",
+        "print(\"Radha Total Payout\")\n",
+        "#print(f\"Salary is: {Salary:9}\")\n",
+        "#print(\"Commission is:\", mycommission)\n",
+        "#print(f\"Tax is: {tax:13}\")\n",
+        "#print(f\"Pay is: {income_after_tax:14}\")\n",
+        "#print(f\"Deductions: {deduction:9}\")\n",
+        "#print(f\"Total Payout: {total_income:8}\")\n",
+        "print(f\"Salary: {Salary:9} \\nCommission:\" {mycommission:}\")"
       ]
     },
     {
@@ -166,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "cJwgf8nZWDF6"
       },
@@ -189,13 +193,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "aMvhhaJVqJcK",
         "outputId": "5d251c06-2afb-49b4-b249-09f3a41c1029"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,13 +219,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "8HQ_pYGqqT6i",
         "outputId": "37ed520e-3cc6-4f4a-c470-e4211c8f51c5"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +256,7 @@
         "id": "Kvo3giKeqoSr",
         "outputId": "ac36716a-bdfb-402f-e78f-3e8601c00ef9"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -279,7 +281,7 @@
         "id": "xTayNe6busYm",
         "outputId": "3a12e9a0-e377-4216-f1e6-6523ac7be96e"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -304,7 +306,7 @@
         "id": "fuT3djzru8Pv",
         "outputId": "c054deca-0ad6-4508-cce9-cc43b716d713"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
