--- a/03_1_payslip.ipynb
+++ b/03_1_payslip.ipynb
@@ -100,22 +100,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 86,
       "metadata": {
         "id": "wFmuD9ujUgDW",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c9eefadd-77e2-4a8b-e25b-fba474213f6c"
+        "outputId": "8fe05742-962a-4daf-8aed-1955cfa2e4cd"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-58-119973ec8762>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    print(f\"Salary: {Salary:9} \\nCommission:\" {mycommission:}\")\u001b[0m\n\u001b[0m                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 17)\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Radha Total Payout\n",
+            "Salary:      30000 \n",
+            "Commission:  1000.0 \n",
+            "Tax:         3100.0 \n",
+            "Pay:         27900.0 \n",
+            "Deduction:   2790.0 \n",
+            "Total Payout: 25110.0\n"
           ]
         }
       ],
@@ -136,7 +140,7 @@
         "#print(f\"Pay is: {income_after_tax:14}\")\n",
         "#print(f\"Deductions: {deduction:9}\")\n",
         "#print(f\"Total Payout: {total_income:8}\")\n",
-        "print(f\"Salary: {Salary:9} \\nCommission:\" {mycommission:}\")"
+        "print(f\"Salary: {Salary:10} \\nCommission: {mycommission:7} \\nTax: {tax:14} \\nPay: {income_after_tax:15} \\nDeduction: {deduction:8} \\nTotal Payout: {total_income:}\")"
       ]
     },
     {
@@ -152,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
         "id": "zMEi9q1dUr36"
       },
